Dream Cars/force-app/main/default/objects/Order/fields/Amount_Left__c.field-meta.xml
<CustomField>
    <fullName>Amount_Left__c</fullName>
    <label>Amount Left</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>