Dream Cars/force-app/main/default/objects/Order/fields/Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>Payments_Count__c</fullName>
    <label>Payments Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>